syntax = "proto3";

package code_push_pb;

import "common.proto";

service IEnv {
  rpc CreateEnv (CreateEnvRequest) returns (EnvResponse) {}
  rpc GetEnv (CreateEnvRequest) returns (EnvResponse) {}
  rpc DeleteEnv (EnvIdRequest) returns (PlainResponse) {}
  rpc GetEnvEncToken (EnvIdRequest) returns (StringResponse) {}
  rpc GetEnvAuthHost (EnvIdRequest) returns (StringResponse) {}
}

message Env {
  string BranchId = 1;
  string EnvId = 2;
  string Name = 3;
  int64 CreateTime = 4;
}

message EnvResponse {
  string code = 1;
  Env data = 2;
}

message CreateEnvRequest {
  string BranchId = 1;
  string EnvName = 2;
}

message EnvIdRequest {
  string EnvId = 1;
}