syntax = "proto3";

package pb;
import "common.proto";

service IBranch {
  rpc CreateBranch(CreateBranchRequest) returns (CreateBranchResponse) {}
  rpc GetBranch(GetBranchRequest) returns (GetBranchResponse) {}
  rpc DeleteBranch(DeleteBranchRequest) returns (PlainResponse) {}
  rpc GetBranchEncToken(GetBranchEncTokenRequest) returns (StringResponse) {}
}

message Branch {
  string BranchId = 1;
  string BranchName = 2;
  int64 CreateTime = 3;
}

message CreateBranchRequest {
  bytes BranchName = 1;
  bytes BranchAuthHost = 2;
}

message CreateBranchResponse {
  string code = 1;
  Branch data = 2;
}

message GetBranchRequest {
  bytes BranchId = 1;
}

message GetBranchResponse {
  string code = 1;
  Branch data = 2;
}

message DeleteBranchRequest {
  bytes BranchId = 1;
}

message GetBranchEncTokenRequest {
  bytes branchId = 1;
}