syntax = "proto3";

package pb;

message PlainResponse {
  string code = 1;
}

message StringResponse {
  string code = 1;
  string data = 2;
}